2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Add copyright headers.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Document EpcDispatcher and provide examples.

	* docs/reference/libepc/.gitignore: Remove libepc-sections.txt.
	* docs/reference/libepc/libepc-sections.txt: Add *Class
	structures as requested by the gtk-doc tool.
	* libepc/consumer.c, libepc/consumer.h, libepc/publisher.c,
	libepc/publisher.h: Add examples and document *Class structures.
	* libepc/dispatcher.c, libepc/dispatcher.h: Document EpcDispatcher.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Provide some initial API documentation.

	* docs/reference/libepc/Makefile.am: Force rebuilding
	of documentation when the code changes.
	* docs/reference/libepc/.gitignore: Ignore *.bak files.
	* libepc/consumer.c, libepc/consumer.h: Some initial documentation.
	* libepc/publisher.c, libepc/publisher.h: Some initial documentation.
	Rename EPC_PUBLISHER_SERVICE_TYPE to EPC_PUBLISHER_SERVICE_NAME.
	* tests/test-consumer.c: Rename EPC_PUBLISHER_SERVICE_TYPE to
	EPC_PUBLISHER_SERVICE_NAME.

2007-11-01  Mathias Hasselmann  <mathias@openismus.com>

	Integrate gtk-doc for API documentation.

	* configure.in, Makefile.am: Integrate gtk-doc for API documentation.
	* gtk-doc.make, docs/reference/libepc/*: Setup gtk-doc infrastructure.

2007-11-01  Mathias Hasselmann  <mathias@openismus.com>

	Handle construct-only properties more stricly.

	* libepc/dispatcher.c, libepc/publisher.c: Assert fields are NULL
	instead of releasing their data, when setting construct-only
	properties.

2007-11-01  Mathias Hasselmann  <mathias@openismus.com>

	Implement the consumer.

	* libepc/consumer.c, libepc/consumer.h: Really implement the consumer.
	* tests/test-consumer.c: Use the consumer API.

2007-11-01  Mathias Hasselmann  <mathias@openismus.com>

	Start the consumer by merging the document-server's client test.

	* tests/test-consumer.c: Just copy the document-server's client test.
