@@ -15,6 +15,7 @@ config.sub
 configure
 depcomp
 install-sh
+libepc.pc
 libtool
 ltmain.sh
 missing
