@@ -12,18 +12,26 @@ noinst_PROGRAMS = \
 	tests/test-publisher \
 	tests/test-consumer
 
+libepc_include_HEADERS = \
+	libepc/consumer.h \
+	libepc/dispatcher.h \
+	libepc/publisher.h
+pkgconfig_DATA = \
+	libepc.pc
+
 libepc_libeasy_publish_consume_la_SOURCES = \
 	libepc/consumer.c \
-	libepc/consumer.h \
 	libepc/dispatcher.c \
-	libepc/dispatcher.h \
 	libepc/publisher.c \
-	libepc/publisher.h
+	$(libepc_HEADERS)
 
 tests_test_publisher_LDADD = libepc/libeasy-publish-consume.la
 
 tests_test_consumer_CFLAGS = $(AM_CFLAGS) $(AVAHIUI_CFLAGS)
 tests_test_consumer_LDADD = libepc/libeasy-publish-consume.la $(AVAHIUI_LIBS)
+
+libepc_includedir = $(includedir)/libepc
+pkgconfigdir = $(libdir)/pkgconfig
 
 -include Makefile.local
 
