@@ -2,7 +2,7 @@ AC_INIT([libepc], [0.1], [mathias@openismus.com])
 AM_INIT_AUTOMAKE([-Wall dist-bzip2 subdir-objects])
 
 AC_CONFIG_HEADER([config.h])
-AC_CONFIG_FILES([Makefile docs/reference/libepc/Makefile])
+AC_CONFIG_FILES([Makefile docs/reference/libepc/Makefile libepc.pc])
 
 AC_PROG_CC
 AM_PROG_CC_C_O
